Added app option to just record video and upload

--- a/BarcodeApp/res/layout/main.xml
+++ b/BarcodeApp/res/layout/main.xml
@@ -13,6 +13,13 @@
             android:onClick="LoginUser"/>
 
         <Button
+            android:id="@+id/backgroundVideo_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/backgroundVideo"
+            android:onClick="captureBackgroundVideo"/>
+        
+        <Button
             android:id="@+id/logout_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
